[package]
name = "pwnboard-rs"
description = "HTTP Bindings for Pwnboard"
repository = "https://github.com/jabbate19/pwnboard-rs"
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["serde_json", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
